--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# macos
+.DS_Store
+
+# project
+repositories
+
+# visual studio code
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
